k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-prediction-service
  labels:
    app: weather-prediction
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: weather-prediction
